--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -166,17 +166,17 @@ public class MyItemProcessor implements ItemProcessor<MyInputObject, MyOutpuObje
 
 #### Tasklet
 
-청크 방식은 여러 데이터를 하나씩 읽어 
+일반적으로는 다수의 데이터를 읽는 Chunk방식이 배치 애플리케이션 구조에는 
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyOTg4NzI5NDIsMTU1ODg0OTY4OCwtMT
-QwNzAxMTM5Niw5MjI1MDkzMjgsMTc0Njg0NTM1MiwtMjExMjg4
-MDk4NCwtMTExMTY2MTkxNCw5OTUwODQxNjEsMTg0MTQ3NzE0LC
-03OTk3NzEwNTQsLTE0NTM1NjM3MTUsLTgxOTM5MjI0MywxNjk0
-MDI1NjY5LDcwMDkyMzYzMywxNjA4MjY5NCwtMzgyMTA2ODk0LD
-E0MzQzNTIxNTYsMjkxODkxMjgyLC0xNzMxMTM4NzQ5LDg1OTU1
-NTQ2M119
+eyJoaXN0b3J5IjpbLTE5NDMyNDk2MTIsLTEyOTg4NzI5NDIsMT
+U1ODg0OTY4OCwtMTQwNzAxMTM5Niw5MjI1MDkzMjgsMTc0Njg0
+NTM1MiwtMjExMjg4MDk4NCwtMTExMTY2MTkxNCw5OTUwODQxNj
+EsMTg0MTQ3NzE0LC03OTk3NzEwNTQsLTE0NTM1NjM3MTUsLTgx
+OTM5MjI0MywxNjk0MDI1NjY5LDcwMDkyMzYzMywxNjA4MjY5NC
+wtMzgyMTA2ODk0LDE0MzQzNTIxNTYsMjkxODkxMjgyLC0xNzMx
+MTM4NzQ5XX0=
 -->
