--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -169,10 +169,15 @@ public class MyItemProcessor implements ItemProcessor<MyInputObject, MyOutpuObje
 일반적으로는 다수의 데이터를 읽는 Chunk방식이 배치 애플리케이션 구조에는 적합하지만 잘 맞지 않는 경우도 있다. 예를들어 테이블 레코드를 한건만 변경하는 것과 같이 청크 방식이 가져다 주는 성능적인 장점은 얻지 못하는 오히려 복잡한 설계로 인해 단점만 커질 수 있다. 이럴때는 Tasklet 방식을 사용한다. 
 
 
+### Spring Batch의 고유 빈 스코프
+
+스프링 배치는 스프링 
+
+
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzMDk0NjQ4MzYsLTEyOTg4NzI5NDIsMT
+eyJoaXN0b3J5IjpbLTExOTg2NjQ1MzYsLTEyOTg4NzI5NDIsMT
 U1ODg0OTY4OCwtMTQwNzAxMTM5Niw5MjI1MDkzMjgsMTc0Njg0
 NTM1MiwtMjExMjg4MDk4NCwtMTExMTY2MTkxNCw5OTUwODQxNj
 EsMTg0MTQ3NzE0LC03OTk3NzEwNTQsLTE0NTM1NjM3MTUsLTgx
