books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -171,13 +171,15 @@ public class MyItemProcessor implements ItemProcessor<MyInputObject, MyOutpuObje
 
 ### Spring Batch의 고유 빈 스코프
 
-스프링 배치는 스프링 
+스프링 배치는 스프링 배치만의 고유한 빈 스코프가 있다. 바로 Step 스코프와 Job 스코프이다. 각각의 스텝과 잡은 생면주기가 제한되는 싱글턴 빈으로 되어있다. 
+
+ItemReader, ItemProcessor, ItemWriter의 구현체는 
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTExOTg2NjQ1MzYsLTEyOTg4NzI5NDIsMT
+eyJoaXN0b3J5IjpbLTIwOTYyOTQ1NTYsLTEyOTg4NzI5NDIsMT
 U1ODg0OTY4OCwtMTQwNzAxMTM5Niw5MjI1MDkzMjgsMTc0Njg0
 NTM1MiwtMjExMjg4MDk4NCwtMTExMTY2MTkxNCw5OTUwODQxNj
 EsMTg0MTQ3NzE0LC03OTk3NzEwNTQsLTE0NTM1NjM3MTUsLTgx
