books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -171,13 +171,13 @@ public class MyItemProcessor implements ItemProcessor<MyInputObject, MyOutpuObje
 
 ### Spring Batch의 고유 빈 스코프
 
-스프링 배치는 스프링 배치만의 고유한 빈 스코프가 있다. 바로 Step 스코프와 Job 스코프이다. 각각의 스텝과 잡은 생면주기가 제한되는 싱글턴 빈으로 되어있다. 왜냐하면 ItemReader, ItemProcessor, ItemWriter의 구현체는 읽거나 쓰거나 하는 과정에서 자원 상태를 유지하기 때문에 같은 빈을 여러 스텝에서 공유할 경우 오동작이 발생할 수 있다. 그래서 Step스코프로 빈을 정의하면 서로 다른 스텝에서는 각각 
+스프링 배치는 스프링 배치만의 고유한 빈 스코프가 있다. 바로 Step 스코프와 Job 스코프이다. 각각의 스텝과 잡은 생면주기가 제한되는 싱글턴 빈으로 되어있다. 왜냐하면 ItemReader, ItemProcessor, ItemWriter의 구현체는 읽거나 쓰거나 하는 과정에서 자원 상태를 유지하기 때문에 같은 빈을 여러 스텝에서 공유할 경우 오동작이 발생할 수 있다. 그래서 Step스코프로 빈을 정의하면 서로 다른 스텝에서는 각각 새로운 빈을 만들기 때문에 안전하게 빈을 다루게 된다. 자바 기반 설정 방식에서는 @StepScope나 @JobScope를 쓰면 된다. 
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0NDcwMTkyOTAsLTEyOTg4NzI5NDIsMT
+eyJoaXN0b3J5IjpbLTE5MTE3MTA2NDYsLTEyOTg4NzI5NDIsMT
 U1ODg0OTY4OCwtMTQwNzAxMTM5Niw5MjI1MDkzMjgsMTc0Njg0
 NTM1MiwtMjExMjg4MDk4NCwtMTExMTY2MTkxNCw5OTUwODQxNj
 EsMTg0MTQ3NzE0LC03OTk3NzEwNTQsLTE0NTM1NjM3MTUsLTgx
