books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -178,18 +178,22 @@ public class MyItemProcessor implements ItemProcessor<MyInputObject, MyOutpuObje
 
 스프링 트랜잭션에서 사용하던 PlatformTransactionManager나 TransactionTemplate을 사용하는데 스프링 배치도 이를 사용한다. 
 
-일반적으로 청크 방식으로 처리하는 경우, 하나의 청크에 대한 일련의 처리 작업이 하나의 트랜잭션으로 묶이기 때문에 청크 처리 
+일반적으로 청크 방식으로 처리하는 경우, 하나의 청크에 대한 일련의 처리 작업이 하나의 트랜잭션으로 묶이기 때문에 청크 처리 메커니즘을 스프링 배치가 관리하게 된다. 
+
+기본적으로 하나의 청크 과정(read, process, write)과정에서 예외가 발생하는 경우 트랜잭션은 롤백을 하게 되어 있다. 
+
+
 
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTA2MzE1NzgxOCwtMTI5ODg3Mjk0MiwxNT
-U4ODQ5Njg4LC0xNDA3MDExMzk2LDkyMjUwOTMyOCwxNzQ2ODQ1
-MzUyLC0yMTEyODgwOTg0LC0xMTExNjYxOTE0LDk5NTA4NDE2MS
-wxODQxNDc3MTQsLTc5OTc3MTA1NCwtMTQ1MzU2MzcxNSwtODE5
-MzkyMjQzLDE2OTQwMjU2NjksNzAwOTIzNjMzLDE2MDgyNjk0LC
-0zODIxMDY4OTQsMTQzNDM1MjE1NiwyOTE4OTEyODIsLTE3MzEx
-Mzg3NDldfQ==
+eyJoaXN0b3J5IjpbLTE4MjEwMjQ0NTgsLTEyOTg4NzI5NDIsMT
+U1ODg0OTY4OCwtMTQwNzAxMTM5Niw5MjI1MDkzMjgsMTc0Njg0
+NTM1MiwtMjExMjg4MDk4NCwtMTExMTY2MTkxNCw5OTUwODQxNj
+EsMTg0MTQ3NzE0LC03OTk3NzEwNTQsLTE0NTM1NjM3MTUsLTgx
+OTM5MjI0MywxNjk0MDI1NjY5LDcwMDkyMzYzMywxNjA4MjY5NC
+wtMzgyMTA2ODk0LDE0MzQzNTIxNTYsMjkxODkxMjgyLC0xNzMx
+MTM4NzQ5XX0=
 -->
