books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -180,20 +180,23 @@ public class MyItemProcessor implements ItemProcessor<MyInputObject, MyOutpuObje
 
 일반적으로 청크 방식으로 처리하는 경우, 하나의 청크에 대한 일련의 처리 작업이 하나의 트랜잭션으로 묶이기 때문에 청크 처리 메커니즘을 스프링 배치가 관리하게 된다. 
 
-기본적으로 하나의 청크 과정(read, process, write)과정에서 예외가 발생하는 경우 트랜잭션은 롤백을 하게 되어 있다. 
+기본적으로 하나의 청크 과정(read, process, write)에서 예외가 발생하는 경우 트랜잭션은 롤백을 하게 되어 있다. 
 
 
+### 여러 스텝 흐름 제어
+
+하나의 잡은 여러 스텝으로 처리할 수 있고 스텝간의 실행순서나 조건을 조정할 수 있다. 이렇게 스텝을 나누어 구현하면 
 
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE4MjEwMjQ0NTgsLTEyOTg4NzI5NDIsMT
-U1ODg0OTY4OCwtMTQwNzAxMTM5Niw5MjI1MDkzMjgsMTc0Njg0
-NTM1MiwtMjExMjg4MDk4NCwtMTExMTY2MTkxNCw5OTUwODQxNj
-EsMTg0MTQ3NzE0LC03OTk3NzEwNTQsLTE0NTM1NjM3MTUsLTgx
-OTM5MjI0MywxNjk0MDI1NjY5LDcwMDkyMzYzMywxNjA4MjY5NC
-wtMzgyMTA2ODk0LDE0MzQzNTIxNTYsMjkxODkxMjgyLC0xNzMx
-MTM4NzQ5XX0=
+eyJoaXN0b3J5IjpbLTE2Nzc3NTU1MTYsLTE4MjEwMjQ0NTgsLT
+EyOTg4NzI5NDIsMTU1ODg0OTY4OCwtMTQwNzAxMTM5Niw5MjI1
+MDkzMjgsMTc0Njg0NTM1MiwtMjExMjg4MDk4NCwtMTExMTY2MT
+kxNCw5OTUwODQxNjEsMTg0MTQ3NzE0LC03OTk3NzEwNTQsLTE0
+NTM1NjM3MTUsLTgxOTM5MjI0MywxNjk0MDI1NjY5LDcwMDkyMz
+YzMywxNjA4MjY5NCwtMzgyMTA2ODk0LDE0MzQzNTIxNTYsMjkx
+ODkxMjgyXX0=
 -->
