books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -185,18 +185,23 @@ public class MyItemProcessor implements ItemProcessor<MyInputObject, MyOutpuObje
 
 ### 여러 스텝 흐름 제어
 
-하나의 잡은 여러 스텝으로 처리할 수 있고 스텝간의 실행순서나 조건을 조정할 수 있다. 이렇게 스텝을 나누어 구현하면 
+하나의 잡은 여러 스텝으로 처리할 수 있고 스텝간의 실행순서나 조건을 조정할 수 있다. 이렇게 스텝을 나누어 구현하면 복잡한 구현을 단순화해서 유지보수에 좋거나 재사용성을 높이는데 도움이 되기도 한다. 
+
+여러 스텝의 실행 순서를 하는건 잡 설정에서 가능하다. 
+
+* 순차적인 실행
+	* 여러 스텝을 지정한 순서대로 실행한다. 일반적으로 앞 순서의 스텝이 정상적으로 되어야 뒤 스텝이 실행되는 방식이다. 
 
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE2Nzc3NTU1MTYsLTE4MjEwMjQ0NTgsLT
-EyOTg4NzI5NDIsMTU1ODg0OTY4OCwtMTQwNzAxMTM5Niw5MjI1
-MDkzMjgsMTc0Njg0NTM1MiwtMjExMjg4MDk4NCwtMTExMTY2MT
-kxNCw5OTUwODQxNjEsMTg0MTQ3NzE0LC03OTk3NzEwNTQsLTE0
-NTM1NjM3MTUsLTgxOTM5MjI0MywxNjk0MDI1NjY5LDcwMDkyMz
-YzMywxNjA4MjY5NCwtMzgyMTA2ODk0LDE0MzQzNTIxNTYsMjkx
-ODkxMjgyXX0=
+eyJoaXN0b3J5IjpbLTE3NTY0NDU0OCwtMTgyMTAyNDQ1OCwtMT
+I5ODg3Mjk0MiwxNTU4ODQ5Njg4LC0xNDA3MDExMzk2LDkyMjUw
+OTMyOCwxNzQ2ODQ1MzUyLC0yMTEyODgwOTg0LC0xMTExNjYxOT
+E0LDk5NTA4NDE2MSwxODQxNDc3MTQsLTc5OTc3MTA1NCwtMTQ1
+MzU2MzcxNSwtODE5MzkyMjQzLDE2OTQwMjU2NjksNzAwOTIzNj
+MzLDE2MDgyNjk0LC0zODIxMDY4OTQsMTQzNDM1MjE1NiwyOTE4
+OTEyODJdfQ==
 -->
