books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -190,14 +190,16 @@ public class MyItemProcessor implements ItemProcessor<MyInputObject, MyOutpuObje
 여러 스텝의 실행 순서를 하는건 잡 설정에서 가능하다. 
 
 * 순차적인 실행
-	* 여러 스텝을 지정한 순서대로 실행한다. 일반적으로 앞 순서의 스텝이 정상적으로 되어야 뒤 스텝이 실행되는 방식이다. 
+	* 여러 스텝을 지정한 순서대로 실행한다. 일반적으로 앞 순서의 스텝이 정상적으로 되어야 뒤 스텝이 실행되는 방식이다. 스텝이 비정상 종료되면, 뒤의 스텝은 실행되지 않고 종료된다.
+* 조건부 실행
+	* Step의 ExitStatus를 보고 조건에 따라 실행할 스텝을 선택한다. 마치 조건 분기 방식으로 처리를 할 수 있다. 
 
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3NTY0NDU0OCwtMTgyMTAyNDQ1OCwtMT
+eyJoaXN0b3J5IjpbLTYyODQ2OTcyMywtMTgyMTAyNDQ1OCwtMT
 I5ODg3Mjk0MiwxNTU4ODQ5Njg4LC0xNDA3MDExMzk2LDkyMjUw
 OTMyOCwxNzQ2ODQ1MzUyLC0yMTEyODgwOTg0LC0xMTExNjYxOT
 E0LDk5NTA4NDE2MSwxODQxNDc3MTQsLTc5OTc3MTA1NCwtMTQ1
