books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -193,17 +193,27 @@ public class MyItemProcessor implements ItemProcessor<MyInputObject, MyOutpuObje
 	* 여러 스텝을 지정한 순서대로 실행한다. 일반적으로 앞 순서의 스텝이 정상적으로 되어야 뒤 스텝이 실행되는 방식이다. 스텝이 비정상 종료되면, 뒤의 스텝은 실행되지 않고 종료된다.
 * 조건부 실행
 	* Step의 ExitStatus를 보고 조건에 따라 실행할 스텝을 선택한다. 마치 조건 분기 방식으로 처리를 할 수 있다. 
+* 잡의 종료
+	* 잡이 종료됐음을 명시적으로 지정할 수 있다. 명시적으로 지정하지 않더라도 더는 실행할 스텝이 없으면 잡이 종료된다. 
+
+```
+<batch: job id="myJob">
+	<batch: step id="stepA">
+	<
+
+</batch: job>
+```
 
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTYyODQ2OTcyMywtMTgyMTAyNDQ1OCwtMT
-I5ODg3Mjk0MiwxNTU4ODQ5Njg4LC0xNDA3MDExMzk2LDkyMjUw
-OTMyOCwxNzQ2ODQ1MzUyLC0yMTEyODgwOTg0LC0xMTExNjYxOT
-E0LDk5NTA4NDE2MSwxODQxNDc3MTQsLTc5OTc3MTA1NCwtMTQ1
-MzU2MzcxNSwtODE5MzkyMjQzLDE2OTQwMjU2NjksNzAwOTIzNj
-MzLDE2MDgyNjk0LC0zODIxMDY4OTQsMTQzNDM1MjE1NiwyOTE4
-OTEyODJdfQ==
+eyJoaXN0b3J5IjpbLTExMTc0NjY2NDgsLTYyODQ2OTcyMywtMT
+gyMTAyNDQ1OCwtMTI5ODg3Mjk0MiwxNTU4ODQ5Njg4LC0xNDA3
+MDExMzk2LDkyMjUwOTMyOCwxNzQ2ODQ1MzUyLC0yMTEyODgwOT
+g0LC0xMTExNjYxOTE0LDk5NTA4NDE2MSwxODQxNDc3MTQsLTc5
+OTc3MTA1NCwtMTQ1MzU2MzcxNSwtODE5MzkyMjQzLDE2OTQwMj
+U2NjksNzAwOTIzNjMzLDE2MDgyNjk0LC0zODIxMDY4OTQsMTQz
+NDM1MjE1Nl19
 -->
