books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -198,8 +198,16 @@ public class MyItemProcessor implements ItemProcessor<MyInputObject, MyOutpuObje
 
 ```
 <batch: job id="myJob">
-	<batch: step id="stepA">
-	<
+	<batch:step id="stepA">
+		<batch:next on="*" to="stepB" />
+		<batch:next on="FAILED" to="stepC" />
+	</batch: step>
+	<batch:step id="stepB">
+		<batch:next on="*" to="stepC" />
+		<batch:next on="FAILED" to="stepC" />
+	</batch: step>
+
+	
 
 </batch: job>
 ```
@@ -209,11 +217,11 @@ public class MyItemProcessor implements ItemProcessor<MyInputObject, MyOutpuObje
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTExMTc0NjY2NDgsLTYyODQ2OTcyMywtMT
-gyMTAyNDQ1OCwtMTI5ODg3Mjk0MiwxNTU4ODQ5Njg4LC0xNDA3
-MDExMzk2LDkyMjUwOTMyOCwxNzQ2ODQ1MzUyLC0yMTEyODgwOT
-g0LC0xMTExNjYxOTE0LDk5NTA4NDE2MSwxODQxNDc3MTQsLTc5
-OTc3MTA1NCwtMTQ1MzU2MzcxNSwtODE5MzkyMjQzLDE2OTQwMj
-U2NjksNzAwOTIzNjMzLDE2MDgyNjk0LC0zODIxMDY4OTQsMTQz
-NDM1MjE1Nl19
+eyJoaXN0b3J5IjpbMTg4NDEzOTcyNSwtNjI4NDY5NzIzLC0xOD
+IxMDI0NDU4LC0xMjk4ODcyOTQyLDE1NTg4NDk2ODgsLTE0MDcw
+MTEzOTYsOTIyNTA5MzI4LDE3NDY4NDUzNTIsLTIxMTI4ODA5OD
+QsLTExMTE2NjE5MTQsOTk1MDg0MTYxLDE4NDE0NzcxNCwtNzk5
+NzcxMDU0LC0xNDUzNTYzNzE1LC04MTkzOTIyNDMsMTY5NDAyNT
+Y2OSw3MDA5MjM2MzMsMTYwODI2OTQsLTM4MjEwNjg5NCwxNDM0
+MzUyMTU2XX0=
 -->
