books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -204,20 +204,23 @@ public class MyItemProcessor implements ItemProcessor<MyInputObject, MyOutpuObje
 	</batch: step>
 	<batch:step id="stepB">
 		<batch:next on="*" to="stepC" />
-		<batch:next on="FAILED" to="stepC" />
+		<batch:fail on="FAILED" />
 	</batch: step>
-
-	
-
+	<batch:step id="stepC">
+	</batch: step>
 </batch: job>
 ```
+
+### 병렬처리
+
+
 
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTg4NDEzOTcyNSwtNjI4NDY5NzIzLC0xOD
+eyJoaXN0b3J5IjpbLTI3MTU4ODA1MSwtNjI4NDY5NzIzLC0xOD
 IxMDI0NDU4LC0xMjk4ODcyOTQyLDE1NTg4NDk2ODgsLTE0MDcw
 MTEzOTYsOTIyNTA5MzI4LDE3NDY4NDUzNTIsLTIxMTI4ODA5OD
 QsLTExMTE2NjE5MTQsOTk1MDg0MTYxLDE4NDE0NzcxNCwtNzk5
