--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -215,14 +215,16 @@ public class MyItemProcessor implements ItemProcessor<MyInputObject, MyOutpuObje
 
 일반적으로 대량의 데이터에 대한 배치처리를 할때는 시간당 처리량을 향상시키기 위해 스텝을 멀티 스레드 방식으로 처리하기 위ㅎ한 기능을 제공한다. 크게 Split 방식과 Partition 방식이 있다. 
 
+#### Split 방식
 
+스플릿 방식은 
 
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTExNjIwNDkxNTQsLTEzMDQ2MzM0MTksLT
+eyJoaXN0b3J5IjpbLTE1NTcwNzQyMzcsLTEzMDQ2MzM0MTksLT
 I3MTU4ODA1MSwtNjI4NDY5NzIzLC0xODIxMDI0NDU4LC0xMjk4
 ODcyOTQyLDE1NTg4NDk2ODgsLTE0MDcwMTEzOTYsOTIyNTA5Mz
 I4LDE3NDY4NDUzNTIsLTIxMTI4ODA5ODQsLTExMTE2NjE5MTQs
