--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -217,11 +217,11 @@ public class MyItemProcessor implements ItemProcessor<MyInputObject, MyOutpuObje
 
 #### Split 방식
 
-스플릿 방식은 스레드 별로 처리해야할 스텝을 나누어 작업하는 방식이다. 
+스플릿 방식은 스레드 별로 처리해야할 스텝을 나누어 작업하는 방식이다. 또한 하나의 스레드에는 여러 스텝들을 연속으로 실행하도록 만들 수 있다.  병렬 처리할 스텝을 세부적으로 지정할 수 있는 장점이 있는 방면 처리할 개수가 많아지면 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1ODU4MzAxODAsLTEzMDQ2MzM0MTksLT
+eyJoaXN0b3J5IjpbLTE1NzA2MzkyNDYsLTEzMDQ2MzM0MTksLT
 I3MTU4ODA1MSwtNjI4NDY5NzIzLC0xODIxMDI0NDU4LC0xMjk4
 ODcyOTQyLDE1NTg4NDk2ODgsLTE0MDcwMTEzOTYsOTIyNTA5Mz
 I4LDE3NDY4NDUzNTIsLTIxMTI4ODA5ODQsLTExMTE2NjE5MTQs
