books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -219,15 +219,54 @@ public class MyItemProcessor implements ItemProcessor<MyInputObject, MyOutpuObje
 
 스플릿 방식은 스레드 별로 처리해야할 스텝을 나누어 작업하는 방식이다. 또한 하나의 스레드에는 여러 스텝들을 연속으로 실행하도록 만들 수 있다.  병렬 처리할 스텝을 세부적으로 지정할 수 있는 장점이 있는 방면 특정 스레드에서 처리해야할 개수가 많아지면 스레드 갯수를 조정하거나 비정상적으로 종료될때 처리가 어려워지는 단점도 있다. 
 
-기본적으로 어느 한 스레드에서 예외가 발생하는 경우 다른 스레드에서 실행되는 스텝에는 영향을 주지 않지만, 병렬 처리가 끝난 이후에 스텝
+기본적으로 어느 한 스레드에서 예외가 발생하는 경우 다른 스레드에서 실행되는 스텝에는 영향을 주지 않지만, 병렬 처리가 끝난 이후에 스텝은 실행되지 않고 비정상적으로 종료하게 된다.
+
+```
+<bean id="taskExecutor" class="org.springframework.core.task.SimpleAsyncTaskExecutor"/>  
+  
+<import resource="classpath:/launch-context.xml" />  
+  
+<batch:job id="refundCashbackJob" job-repository="jobRepository">  
+ <batch:split id="refundCashbackSplit" task-executor="taskExecutor">  
+ <batch:next on="*" to="refundCashbackNotificationStep" />  
+ <batch:flow>  
+ <batch:step id="nonAlwaysSaleRefundCashbackStep">  
+ <batch:tasklet transaction-manager="transactionManager">  
+ <batch:chunk reader="nonAlwaysSaleRefundCashbackReader" writer="nonAlwaysSaleRefundCashbackWriter" commit-interval="1" skip-limit="99999999" retry-limit="0">  
+ <batch:skippable-exception-classes>  
+ <batch:include class="com.tmoncorp.delivery.exception.SkippableException"/>  
+ </batch:skippable-exception-classes>  
+ </batch:chunk>  
+ <batch:listeners>  
+ <batch:listener ref="longQueryEnableListener"/>  
+ </batch:listeners>  
+ </batch:tasklet>  
+ </batch:step>  
+ </batch:flow>  
+ <batch:flow>  
+ <batch:step id="alwaysSaleRefundCashbackStep">  
+ <batch:tasklet transaction-manager="transactionManager" >  
+ <batch:chunk reader="alwaysSaleRefundCashbackReader" writer="alwaysSaleRefundCashbackWriter" commit-interval="1" skip-limit="99999999" retry-limit="0">  
+ <batch:skippable-exception-classes>  
+ <batch:include class="com.tmoncorp.delivery.exception.SkippableException"/>  
+ </batch:skippable-exception-classes>  
+ </batch:chunk>  
+ <batch:listeners>  
+ <batch:listener ref="longQueryEnableListener"/>  
+ </batch:listeners>  
+ </batch:tasklet>  
+ </batch:step>  
+ </batch:flow>  
+ </batch:split>
+```
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3MjE0ODg4NjgsLTEzMDQ2MzM0MTksLT
-I3MTU4ODA1MSwtNjI4NDY5NzIzLC0xODIxMDI0NDU4LC0xMjk4
-ODcyOTQyLDE1NTg4NDk2ODgsLTE0MDcwMTEzOTYsOTIyNTA5Mz
-I4LDE3NDY4NDUzNTIsLTIxMTI4ODA5ODQsLTExMTE2NjE5MTQs
-OTk1MDg0MTYxLDE4NDE0NzcxNCwtNzk5NzcxMDU0LC0xNDUzNT
-YzNzE1LC04MTkzOTIyNDMsMTY5NDAyNTY2OSw3MDA5MjM2MzMs
-MTYwODI2OTRdfQ==
+eyJoaXN0b3J5IjpbLTc3ODM2NDM0LC0xMzA0NjMzNDE5LC0yNz
+E1ODgwNTEsLTYyODQ2OTcyMywtMTgyMTAyNDQ1OCwtMTI5ODg3
+Mjk0MiwxNTU4ODQ5Njg4LC0xNDA3MDExMzk2LDkyMjUwOTMyOC
+wxNzQ2ODQ1MzUyLC0yMTEyODgwOTg0LC0xMTExNjYxOTE0LDk5
+NTA4NDE2MSwxODQxNDc3MTQsLTc5OTc3MTA1NCwtMTQ1MzU2Mz
+cxNSwtODE5MzkyMjQzLDE2OTQwMjU2NjksNzAwOTIzNjMzLDE2
+MDgyNjk0XX0=
 -->
