books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -224,10 +224,8 @@ public class MyItemProcessor implements ItemProcessor<MyInputObject, MyOutpuObje
 ```
 <bean id="taskExecutor" class="org.springframework.core.task.SimpleAsyncTaskExecutor"/>  
   
-<import resource="classpath:/launch-context.xml" />  
-  
-<batch:job id="refundCashbackJob" job-repository="jobRepository">  
- <batch:split id="refundCashbackSplit" task-executor="taskExecutor">  
+ <batch:job id="myJob">  
+	 <batch:split id="refundCashbackSplit" task-executor="taskExecutor">  
  <batch:next on="*" to="refundCashbackNotificationStep" />  
  <batch:flow>  
  <batch:step id="nonAlwaysSaleRefundCashbackStep">  
@@ -262,7 +260,7 @@ public class MyItemProcessor implements ItemProcessor<MyInputObject, MyOutpuObje
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTc3ODM2NDM0LC0xMzA0NjMzNDE5LC0yNz
+eyJoaXN0b3J5IjpbMzgxNDA1NjYxLC0xMzA0NjMzNDE5LC0yNz
 E1ODgwNTEsLTYyODQ2OTcyMywtMTgyMTAyNDQ1OCwtMTI5ODg3
 Mjk0MiwxNTU4ODQ5Njg4LC0xNDA3MDExMzk2LDkyMjUwOTMyOC
 wxNzQ2ODQ1MzUyLC0yMTEyODgwOTg0LC0xMTExNjYxOTE0LDk5
