books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -225,9 +225,9 @@ public class MyItemProcessor implements ItemProcessor<MyInputObject, MyOutpuObje
 <bean id="taskExecutor" class="org.springframework.core.task.SimpleAsyncTaskExecutor"/>  
   
  <batch:job id="myJob">  
-	 <batch:split id="refundCashbackSplit" task-executor="taskExecutor">  
- <batch:next on="*" to="refundCashbackNotificationStep" />  
- <batch:flow>  
+	 <batch:split id="split1" task-executor="taskExecutor" next="fianlStep">  
+ 
+<batch:flow>  
  <batch:step id="nonAlwaysSaleRefundCashbackStep">  
  <batch:tasklet transaction-manager="transactionManager">  
  <batch:chunk reader="nonAlwaysSaleRefundCashbackReader" writer="nonAlwaysSaleRefundCashbackWriter" commit-interval="1" skip-limit="99999999" retry-limit="0">  
@@ -260,11 +260,11 @@ public class MyItemProcessor implements ItemProcessor<MyInputObject, MyOutpuObje
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMzgxNDA1NjYxLC0xMzA0NjMzNDE5LC0yNz
-E1ODgwNTEsLTYyODQ2OTcyMywtMTgyMTAyNDQ1OCwtMTI5ODg3
-Mjk0MiwxNTU4ODQ5Njg4LC0xNDA3MDExMzk2LDkyMjUwOTMyOC
-wxNzQ2ODQ1MzUyLC0yMTEyODgwOTg0LC0xMTExNjYxOTE0LDk5
-NTA4NDE2MSwxODQxNDc3MTQsLTc5OTc3MTA1NCwtMTQ1MzU2Mz
-cxNSwtODE5MzkyMjQzLDE2OTQwMjU2NjksNzAwOTIzNjMzLDE2
-MDgyNjk0XX0=
+eyJoaXN0b3J5IjpbMTczNjg5MjUwNSwtMTMwNDYzMzQxOSwtMj
+cxNTg4MDUxLC02Mjg0Njk3MjMsLTE4MjEwMjQ0NTgsLTEyOTg4
+NzI5NDIsMTU1ODg0OTY4OCwtMTQwNzAxMTM5Niw5MjI1MDkzMj
+gsMTc0Njg0NTM1MiwtMjExMjg4MDk4NCwtMTExMTY2MTkxNCw5
+OTUwODQxNjEsMTg0MTQ3NzE0LC03OTk3NzEwNTQsLTE0NTM1Nj
+M3MTUsLTgxOTM5MjI0MywxNjk0MDI1NjY5LDcwMDkyMzYzMywx
+NjA4MjY5NF19
 -->
