books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -226,10 +226,10 @@ public class MyItemProcessor implements ItemProcessor<MyInputObject, MyOutpuObje
   
  <batch:job id="myJob">  
 	 <batch:split id="split1" task-executor="taskExecutor" next="fianlStep">  
- 
-<batch:flow>  
- <batch:step id="nonAlwaysSaleRefundCashbackStep">  
- <batch:tasklet transaction-manager="transactionManager">  
+	 <batch:flow>
+		 <batch:step id="stepA" next="stepB">  
+ 		 <batch:step id="stepB">
+	 </batch:flow>  
  <batch:chunk reader="nonAlwaysSaleRefundCashbackReader" writer="nonAlwaysSaleRefundCashbackWriter" commit-interval="1" skip-limit="99999999" retry-limit="0">  
  <batch:skippable-exception-classes>  
  <batch:include class="com.tmoncorp.delivery.exception.SkippableException"/>  
@@ -260,7 +260,7 @@ public class MyItemProcessor implements ItemProcessor<MyInputObject, MyOutpuObje
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTczNjg5MjUwNSwtMTMwNDYzMzQxOSwtMj
+eyJoaXN0b3J5IjpbLTc0MjIwMTMwOCwtMTMwNDYzMzQxOSwtMj
 cxNTg4MDUxLC02Mjg0Njk3MjMsLTE4MjEwMjQ0NTgsLTEyOTg4
 NzI5NDIsMTU1ODg0OTY4OCwtMTQwNzAxMTM5Niw5MjI1MDkzMj
 gsMTc0Njg0NTM1MiwtMjExMjg4MDk4NCwtMTExMTY2MTkxNCw5
