books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -237,13 +237,17 @@ public class MyItemProcessor implements ItemProcessor<MyInputObject, MyOutpuObje
  </batch:job>
 ```
 
+#### Partition 방식
+
+파티션 방식은 하나의 스텝을 병렬처리 할때 사용한다. 처리할 스텝을 스레드마다 지정하는 것이 아닌, 하나의 스탭
+
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTMwODI1Njk3MSwtMTMwNDYzMzQxOSwtMj
-cxNTg4MDUxLC02Mjg0Njk3MjMsLTE4MjEwMjQ0NTgsLTEyOTg4
-NzI5NDIsMTU1ODg0OTY4OCwtMTQwNzAxMTM5Niw5MjI1MDkzMj
-gsMTc0Njg0NTM1MiwtMjExMjg4MDk4NCwtMTExMTY2MTkxNCw5
-OTUwODQxNjEsMTg0MTQ3NzE0LC03OTk3NzEwNTQsLTE0NTM1Nj
-M3MTUsLTgxOTM5MjI0MywxNjk0MDI1NjY5LDcwMDkyMzYzMywx
-NjA4MjY5NF19
+eyJoaXN0b3J5IjpbLTUyMjM5MDUwMiwxMzA4MjU2OTcxLC0xMz
+A0NjMzNDE5LC0yNzE1ODgwNTEsLTYyODQ2OTcyMywtMTgyMTAy
+NDQ1OCwtMTI5ODg3Mjk0MiwxNTU4ODQ5Njg4LC0xNDA3MDExMz
+k2LDkyMjUwOTMyOCwxNzQ2ODQ1MzUyLC0yMTEyODgwOTg0LC0x
+MTExNjYxOTE0LDk5NTA4NDE2MSwxODQxNDc3MTQsLTc5OTc3MT
+A1NCwtMTQ1MzU2MzcxNSwtODE5MzkyMjQzLDE2OTQwMjU2Njks
+NzAwOTIzNjMzXX0=
 -->
