books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -239,11 +239,11 @@ public class MyItemProcessor implements ItemProcessor<MyInputObject, MyOutpuObje
 
 #### Partition 방식
 
-파티션 방식은 하나의 스텝을 병렬처리 할때 사용한다. 처리할 스텝을 스레드마다 지정하는 것이 아닌, 하나의 스탭
+파티션 방식은 하나의 스텝을 병렬처리 할때 사용한다. 처리할 스텝을 스레드마다 지정하는 것이 아닌, 하나의 스텝에서 처리할 데이터 갯수를 grid-size 속성으로 조절할 수 있다. 그래서 대량의 데이터를 분할해서 병렬 처리해야한다면 파티션 방식이 적합하다. 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTUyMjM5MDUwMiwxMzA4MjU2OTcxLC0xMz
+eyJoaXN0b3J5IjpbMTc3NTg3MTk2OSwxMzA4MjU2OTcxLC0xMz
 A0NjMzNDE5LC0yNzE1ODgwNTEsLTYyODQ2OTcyMywtMTgyMTAy
 NDQ1OCwtMTI5ODg3Mjk0MiwxNTU4ODQ5Njg4LC0xNDA3MDExMz
 k2LDkyMjUwOTMyOCwxNzQ2ODQ1MzUyLC0yMTEyODgwOTg0LC0x
