books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -241,13 +241,17 @@ public class MyItemProcessor implements ItemProcessor<MyInputObject, MyOutpuObje
 
 파티션 방식은 하나의 스텝을 병렬처리 할때 사용한다. 처리할 스텝을 스레드마다 지정하는 것이 아닌, 하나의 스텝에서 처리할 데이터 갯수를 grid-size 속성으로 조절할 수 있다. 그래서 대량의 데이터를 분할해서 병렬 처리해야한다면 파티션 방식이 적합하다. 
 
+Split 방식과 비슷하게 어느 한 스레드가 비정상적으로 종료되어도 다른 스텝에는 영향을 주지않는다. 다만 병렬처리가 끝난 후 스텝은 실행되지 않고 잡은 비정상적으로 종료하게 된다. 
+
+
+
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTc3NTg3MTk2OSwxMzA4MjU2OTcxLC0xMz
-A0NjMzNDE5LC0yNzE1ODgwNTEsLTYyODQ2OTcyMywtMTgyMTAy
-NDQ1OCwtMTI5ODg3Mjk0MiwxNTU4ODQ5Njg4LC0xNDA3MDExMz
-k2LDkyMjUwOTMyOCwxNzQ2ODQ1MzUyLC0yMTEyODgwOTg0LC0x
-MTExNjYxOTE0LDk5NTA4NDE2MSwxODQxNDc3MTQsLTc5OTc3MT
-A1NCwtMTQ1MzU2MzcxNSwtODE5MzkyMjQzLDE2OTQwMjU2Njks
-NzAwOTIzNjMzXX0=
+eyJoaXN0b3J5IjpbMTI2NDcwNzgwLDE3NzU4NzE5NjksMTMwOD
+I1Njk3MSwtMTMwNDYzMzQxOSwtMjcxNTg4MDUxLC02Mjg0Njk3
+MjMsLTE4MjEwMjQ0NTgsLTEyOTg4NzI5NDIsMTU1ODg0OTY4OC
+wtMTQwNzAxMTM5Niw5MjI1MDkzMjgsMTc0Njg0NTM1MiwtMjEx
+Mjg4MDk4NCwtMTExMTY2MTkxNCw5OTUwODQxNjEsMTg0MTQ3Nz
+E0LC03OTk3NzEwNTQsLTE0NTM1NjM3MTUsLTgxOTM5MjI0Mywx
+Njk0MDI1NjY5XX0=
 -->
