books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -243,16 +243,29 @@ public class MyItemProcessor implements ItemProcessor<MyInputObject, MyOutpuObje
 
 Split 방식과 비슷하게 어느 한 스레드가 비정상적으로 종료되어도 다른 스텝에는 영향을 주지않는다. 다만 병렬처리가 끝난 후 스텝은 실행되지 않고 잡은 비정상적으로 종료하게 된다. 
 
-
+```
+<bean id="taskExecutor" class="org.springframework.core.task.SimpleAsyncTaskExecutor"/>  
+<bean id="partitioner" class="org.springframework.batch.core.partition.support.SimplePartitioner"/>  
+ 
+<batch:job id="job">  
+			 <batch:step id="stepA" next="stepB" />  
+	 		 <batch:step id="stepB" />
+		 </batch:flow>
+		 <batch:flow>
+			 <batch:step id="stepC" />
+		 </batch:flow>
+	 </batch:split>
+ </batch:job>
+```
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTc3Mjk2OTM4NiwxNzc1ODcxOTY5LDEzMD
-gyNTY5NzEsLTEzMDQ2MzM0MTksLTI3MTU4ODA1MSwtNjI4NDY5
-NzIzLC0xODIxMDI0NDU4LC0xMjk4ODcyOTQyLDE1NTg4NDk2OD
-gsLTE0MDcwMTEzOTYsOTIyNTA5MzI4LDE3NDY4NDUzNTIsLTIx
-MTI4ODA5ODQsLTExMTE2NjE5MTQsOTk1MDg0MTYxLDE4NDE0Nz
-cxNCwtNzk5NzcxMDU0LC0xNDUzNTYzNzE1LC04MTkzOTIyNDMs
-MTY5NDAyNTY2OV19
+eyJoaXN0b3J5IjpbLTMyMjYxMTA2LDE3NzI5NjkzODYsMTc3NT
+g3MTk2OSwxMzA4MjU2OTcxLC0xMzA0NjMzNDE5LC0yNzE1ODgw
+NTEsLTYyODQ2OTcyMywtMTgyMTAyNDQ1OCwtMTI5ODg3Mjk0Mi
+wxNTU4ODQ5Njg4LC0xNDA3MDExMzk2LDkyMjUwOTMyOCwxNzQ2
+ODQ1MzUyLC0yMTEyODgwOTg0LC0xMTExNjYxOTE0LDk5NTA4ND
+E2MSwxODQxNDc3MTQsLTc5OTc3MTA1NCwtMTQ1MzU2MzcxNSwt
+ODE5MzkyMjQzXX0=
 -->
