--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -268,21 +268,21 @@ public class Mypartitioner implements Partitioner {
 		Map map = new HashMap<String, ExecutionContext>;
 		for(int i = 0; i< gridSize; i++){
 			ExecutionContext context = new ExecutionContext();
-			execution.putInt(
+			execution.putInt(PARTITION_NO_PROPERTY, i);
+			map.put(PARTITION_KEY+i, context);
 		}
+		return map;
 	}
-
-
 }
 ```
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTk5OTQxNjM0MSwtMjAyODY1NTg0MywxNz
-cyOTY5Mzg2LDE3NzU4NzE5NjksMTMwODI1Njk3MSwtMTMwNDYz
-MzQxOSwtMjcxNTg4MDUxLC02Mjg0Njk3MjMsLTE4MjEwMjQ0NT
-gsLTEyOTg4NzI5NDIsMTU1ODg0OTY4OCwtMTQwNzAxMTM5Niw5
-MjI1MDkzMjgsMTc0Njg0NTM1MiwtMjExMjg4MDk4NCwtMTExMT
-Y2MTkxNCw5OTUwODQxNjEsMTg0MTQ3NzE0LC03OTk3NzEwNTQs
-LTE0NTM1NjM3MTVdfQ==
+eyJoaXN0b3J5IjpbNTk2OTM3NDg1LC0yMDI4NjU1ODQzLDE3Nz
+I5NjkzODYsMTc3NTg3MTk2OSwxMzA4MjU2OTcxLC0xMzA0NjMz
+NDE5LC0yNzE1ODgwNTEsLTYyODQ2OTcyMywtMTgyMTAyNDQ1OC
+wtMTI5ODg3Mjk0MiwxNTU4ODQ5Njg4LC0xNDA3MDExMzk2LDky
+MjUwOTMyOCwxNzQ2ODQ1MzUyLC0yMTEyODgwOTg0LC0xMTExNj
+YxOTE0LDk5NTA4NDE2MSwxODQxNDc3MTQsLTc5OTc3MTA1NCwt
+MTQ1MzU2MzcxNV19
 -->
