books/programming-interview/main/포인.md updated from https://stackedit.io/

--- a/books/programming-interview/main/포인.md
+++ b/books/programming-interview/main/포인.md
@@ -7,10 +7,19 @@
 
 ## 문제
 
+> 가비지 컬렉션이란 무엇인가? 가비지 컬렉션을 구현하는 여러 방법에 대해 설명하고 각각의 장단점에 대해 논하라.
+
+# 기술과 무관한 질문
+
+>기술과 무관한 질문도 중요하다. 신중하게 답변하자. 
+
+
+##
+
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTg4NzAwOTYwMV19
+eyJoaXN0b3J5IjpbLTE0MjMzNjA3XX0=
 -->
