books/programming-interview/main/포인.md updated from https://stackedit.io/

--- a/books/programming-interview/main/포인.md
+++ b/books/programming-interview/main/포인.md
@@ -13,13 +13,24 @@
 
 >기술과 무관한 질문도 중요하다. 신중하게 답변하자. 
 
+## 질문 
 
-##
+> 무엇을 하고 싶습니까?
+
+> 업무 스타일이 어떻습니까?
+
+> 자신의 경력에 대해 애기해보세요.
+
+> 왜 이직을 하려고 하나요?
+
+> 연봉은 얼마 정도 생각하십니까?
+
+
 
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0MjMzNjA3XX0=
+eyJoaXN0b3J5IjpbMTM3MDA5Mzc0OF19
 -->
