books/programming-interview/main/포인.md updated from https://stackedit.io/

--- a/books/programming-interview/main/포인.md
+++ b/books/programming-interview/main/포인.md
@@ -2,7 +2,7 @@
 
 > 이력서에 있는 내용이라면 어떤 내용에 대한 질문이라도 대답할 수 있도록 준비해야 한다
 
-
+=
 >구체적이고 자세하게 대답하자. 
 
 ## 문제
@@ -25,12 +25,16 @@
 
 > 연봉은 얼마 정도 생각하십니까?
 
+> 이 회사에서 당신을 고용해야할까요?
 
+> 혹시 질문 있습니까?
+
+> 이 회사에서 일하고 싶은 이유를 말씀해주세요.
 
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTM3MDA5Mzc0OF19
+eyJoaXN0b3J5IjpbMjcwOTkzODk1XX0=
 -->
