books/programming-interview/main/포인.md updated from https://stackedit.io/

--- a/books/programming-interview/main/포인.md
+++ b/books/programming-interview/main/포인.md
@@ -2,7 +2,10 @@
 
 > 이력서에 있는 내용이라면 어떤 내용에 대한 질문이라도 대답할 수 있도록 준비해야 한다
 
-Spring Framework, 배송, 클레임 도메인
+Spring Framework, 배송, 클레임 도메인, Spring Batch, NoSQL인 Couchbase
+
+평균 배송 소요일 계산
+
 
 > 구체적이고 자세하게 대답하자. 
 
@@ -37,6 +40,6 @@ Spring Framework, 배송, 클레임 도메인
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyOTI3MDk3MjAsLTE5NjMwODUxMjZdfQ
-==
+eyJoaXN0b3J5IjpbLTEwNTUzMjY5NTUsLTEyOTI3MDk3MjAsLT
+E5NjMwODUxMjZdfQ==
 -->
