--- a/books/programming-interview/main/포인.md
+++ b/books/programming-interview/main/포인.md
@@ -6,6 +6,10 @@ Spring Framework, 배송, 클레임 도메인, Spring Batch, NoSQL인 Couchbase
 
 평균 배송 소요일 계산
 
+내 스터디(effective-java, code-complete, ...)와 흥미 있는 분야의 독서(통계, 알고리즘)
+
+논문 내용
+
 
 > 구체적이고 자세하게 대답하자. 
 
@@ -40,6 +44,6 @@ Spring Framework, 배송, 클레임 도메인, Spring Batch, NoSQL인 Couchbase
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwNTUzMjY5NTUsLTEyOTI3MDk3MjAsLT
-E5NjMwODUxMjZdfQ==
+eyJoaXN0b3J5IjpbLTg3ODYxOTQ3MCwtMTA1NTMyNjk1NSwtMT
+I5MjcwOTcyMCwtMTk2MzA4NTEyNl19
 -->
