--- a/books/programming-interview/main/포인.md
+++ b/books/programming-interview/main/포인.md
@@ -25,7 +25,7 @@ Spring Framework, 배송, 클레임 도메인, Spring Batch, NoSQL인 Couchbase
 
 > 무엇을 하고 싶습니까?
 
-저는 TMON에서 
+저는 예전부터 백엔드 프로그래밍에 관심이 있었고 때문에 TMON에서도 배송, 클레임 도메인에서 백엔드 개발을 해왔다. 
 
 > 업무 스타일이 어떻습니까?
 
@@ -46,6 +46,6 @@ Spring Framework, 배송, 클레임 도메인, Spring Batch, NoSQL인 Couchbase
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTk4NTM5NjUxNCwtMTA1NTMyNjk1NSwtMT
+eyJoaXN0b3J5IjpbMTUyNTkzOTE3NCwtMTA1NTMyNjk1NSwtMT
 I5MjcwOTcyMCwtMTk2MzA4NTEyNl19
 -->
