--- a/books/programming-interview/main/포인.md
+++ b/books/programming-interview/main/포인.md
@@ -28,8 +28,11 @@ Spring Framework, 배송, 클레임 도메인, Spring Batch, NoSQL인 Couchbase
 저는 예전부터 백엔드 프로그래밍에 관심이 있었고 때문에 TMON에서도 배송, 클레임 도메인에서 백엔드 개발을 해왔다. TMON에서는 어떤 주문이 완료된 시점이후 서비스를 제공해보았으니 이제 좀더 앞단의 서비스인 페이 서비스를 개발해보고 싶다. 
 
 > 자신의 경력에 대해 애기해보세요.
-> TIP. 열의와 열정을 담아 주요 업적에 대해 자신있게 대답해 보자. 
-> 대답시간은 30 ~ 60초 정도가 적당하다. 
+> TIP. 열의와 열정을 담아 주요 업적에 대해 자신있게 대답해 보자.자. 30 ~ 60초 정도
+
+맡았던 프로젝트에 대해 열정 2건 정도? 그리고 
+
+
 
 
 > 왜 이직을 하려고 하나요?
@@ -47,6 +50,6 @@ Spring Framework, 배송, 클레임 도메인, Spring Batch, NoSQL인 Couchbase
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTI3OTYyNzExLC0xMDU1MzI2OTU1LC0xMj
-kyNzA5NzIwLC0xOTYzMDg1MTI2XX0=
+eyJoaXN0b3J5IjpbMjg4MDYxNTIxLDkyNzk2MjcxMSwtMTA1NT
+MyNjk1NSwtMTI5MjcwOTcyMCwtMTk2MzA4NTEyNl19
 -->
