books/programming-interview/main/포인.md updated from https://stackedit.io/

--- a/books/programming-interview/main/포인.md
+++ b/books/programming-interview/main/포인.md
@@ -30,7 +30,7 @@ Spring Framework, 배송, 클레임 도메인, Spring Batch, NoSQL인 Couchbase
 > 자신의 경력에 대해 애기해보세요.
 > TIP. 열의와 열정을 담아 주요 업적에 대해 자신있게 대답해 보자.자. 30 ~ 60초 정도
 
-맡았던 프로젝트에 대해 열정 2건 정도? 그리고 
+저는 3년간 TMON에서 개발 경력을 쌓았습니다. 
 
 
 
@@ -50,6 +50,6 @@ Spring Framework, 배송, 클레임 도메인, Spring Batch, NoSQL인 Couchbase
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjg4MDYxNTIxLDkyNzk2MjcxMSwtMTA1NT
-MyNjk1NSwtMTI5MjcwOTcyMCwtMTk2MzA4NTEyNl19
+eyJoaXN0b3J5IjpbLTgzNjA1MjEzNSw5Mjc5NjI3MTEsLTEwNT
+UzMjY5NTUsLTEyOTI3MDk3MjAsLTE5NjMwODUxMjZdfQ==
 -->
