--- a/books/programming-interview/main/포인.md
+++ b/books/programming-interview/main/포인.md
@@ -30,7 +30,7 @@ Spring Framework, 배송, 클레임 도메인, Spring Batch, NoSQL인 Couchbase
 > 자신의 경력에 대해 애기해보세요.
 > TIP. 열의와 열정을 담아 주요 업적에 대해 자신있게 대답해 보자.자. 30 ~ 60초 정도
 
-저는 3년간 TMON에서 개발 경력을 쌓았습니다. 
+저는 3년간 TMON에서 개발 경력을 쌓았습니다. 제가 속한 팀의 업무는 배송, 클레임 관련 서비스 개발 및 유지 보수
 
 
 
@@ -50,6 +50,6 @@ Spring Framework, 배송, 클레임 도메인, Spring Batch, NoSQL인 Couchbase
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTgzNjA1MjEzNSw5Mjc5NjI3MTEsLTEwNT
+eyJoaXN0b3J5IjpbLTk2MTA0MzA5MSw5Mjc5NjI3MTEsLTEwNT
 UzMjY5NTUsLTEyOTI3MDk3MjAsLTE5NjMwODUxMjZdfQ==
 -->
