--- a/books/programming-interview/main/포인.md
+++ b/books/programming-interview/main/포인.md
@@ -30,7 +30,7 @@ Spring Framework, 배송, 클레임 도메인, Spring Batch, NoSQL인 Couchbase
 > 자신의 경력에 대해 애기해보세요.
 > TIP. 열의와 열정을 담아 주요 업적에 대해 자신있게 대답해 보자.자. 30 ~ 60초 정도
 
-저는 3년간 TMON에서 개발 경력을 쌓았습니다. 제가 속한 팀의 업무는 배송, 클레임 관련 서비스 개발 및 유지 보수였습니다. 프로젝트로는 선물하기, 평균배송일 계산 등이 있습니다. 선물하기 기능은 기존 TMON 배송 서비스를 기존 고객 뿐만 아니라 미가입 고객에게도 제공하는 서비스입니다. 저의 역할은 DB Schema 디자인과 선물 주문 적재 API 개발이었습니다. API의 경우 기존에 존재하던 DB 적재 API를 수정해야했는데 잘못되면 굉장히 위험한 API였습니다.  
+저는 3년간 TMON에서 개발 경력을 쌓았습니다. 제가 속한 팀의 업무는 배송, 클레임 관련 서비스 개발 및 유지 보수였습니다. 프로젝트로는 선물하기, 평균배송일 계산 등이 있습니다. 선물하기 기능은 기존 TMON 배송 서비스를 기존 고객 뿐만 아니라 미가입 고객에게도 제공하는 서비스입니다. 저의 역할은 DB Schema 디자인과 선물 주문 적재 API 개발이었습니다. API의 경우 기존에 존재하던 DB 적재 API를 수정해야했는데 잘못되면 굉장히 위험한 API였습니다.  이를 위해 단위 테스트 코드 작성과 코드 분석을 통해 적절한 트랜잭션을 사용하도록 하였습니다. 결과적으로 성공적인 서비스가 되었고 
 
 > 왜 이직을 하려고 하나요?
 
@@ -47,7 +47,7 @@ Spring Framework, 배송, 클레임 도메인, Spring Batch, NoSQL인 Couchbase
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTU4NTg4MTczMywxNDk1MDAyNDcxLDkyNz
-k2MjcxMSwtMTA1NTMyNjk1NSwtMTI5MjcwOTcyMCwtMTk2MzA4
-NTEyNl19
+eyJoaXN0b3J5IjpbMTk0MDk3NzE2LDE0OTUwMDI0NzEsOTI3OT
+YyNzExLC0xMDU1MzI2OTU1LC0xMjkyNzA5NzIwLC0xOTYzMDg1
+MTI2XX0=
 -->
