--- a/books/programming-interview/main/포인.md
+++ b/books/programming-interview/main/포인.md
@@ -33,7 +33,9 @@ Spring Framework, 배송, 클레임 도메인, Spring Batch, NoSQL인 Couchbase
 저는 3년간 TMON에서 개발 경력을 쌓았습니다. 제가 속한 팀의 업무는 배송, 클레임 관련 서비스 개발 및 유지 보수였습니다. 프로젝트로는 선물하기, 평균배송일 계산 등이 있습니다. 선물하기 기능은 기존 TMON 배송 서비스를 기존 고객 뿐만 아니라 미가입 고객에게도 제공하는 서비스입니다. 저의 역할은 DB Schema 디자인과 선물 주문 적재 API 개발이었습니다. API의 경우 기존에 존재하던 DB 적재 API를 수정해야했는데 잘못되면 굉장히 위험한 API였습니다.  이를 위해 단위 테스트 코드 작성과 코드 분석을 통해 적절한 트랜잭션을 사용하도록 하였습니다. 결과적으로 치명적인 오류 없이 성공적으로 서비스가 배포되었으며 TMON의 배송 주문 건중에서 약 200건 중 1건은 이용하는 서비스가 되었습니다. 
 
 > 왜 이직을 하려고 하나요?
+> 환경의 변화, 어쩔수 없는 요인, 면접관이 알고 있는 약점
 
+저는 개발자로 3년ㄷ
 
 
 > 연봉은 얼마 정도 생각하십니까?
@@ -49,7 +51,7 @@ Spring Framework, 배송, 클레임 도메인, Spring Batch, NoSQL인 Couchbase
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTgzNzM3MTczOSwxOTQwOTc3MTYsMTQ5NT
-AwMjQ3MSw5Mjc5NjI3MTEsLTEwNTUzMjY5NTUsLTEyOTI3MDk3
-MjAsLTE5NjMwODUxMjZdfQ==
+eyJoaXN0b3J5IjpbLTE4Mzg0Njc0NDAsMTk0MDk3NzE2LDE0OT
+UwMDI0NzEsOTI3OTYyNzExLC0xMDU1MzI2OTU1LC0xMjkyNzA5
+NzIwLC0xOTYzMDg1MTI2XX0=
 -->
