books/programming-interview/main/포인.md updated from https://stackedit.io/

--- a/books/programming-interview/main/포인.md
+++ b/books/programming-interview/main/포인.md
@@ -35,7 +35,9 @@ Spring Framework, 배송, 클레임 도메인, Spring Batch, NoSQL인 Couchbase
 > 왜 이직을 하려고 하나요?
 > 환경의 변화, 어쩔수 없는 요인, 면접관이 알고 있는 약점
 
-저는 개발자로 3년ㄷ
+저는 개발자로 3년동안 일을 했습니다. 3년동안 배송과 클래임 서비스에 대해서 충분히 경험했다고 생각하고 이제 페이와 같이 이러한 서비스의 앞단의 서비스를 경험해보고 싶습니다. 
+
+
 
 
 > 연봉은 얼마 정도 생각하십니까?
@@ -51,7 +53,7 @@ Spring Framework, 배송, 클레임 도메인, Spring Batch, NoSQL인 Couchbase
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE4Mzg0Njc0NDAsMTk0MDk3NzE2LDE0OT
-UwMDI0NzEsOTI3OTYyNzExLC0xMDU1MzI2OTU1LC0xMjkyNzA5
-NzIwLC0xOTYzMDg1MTI2XX0=
+eyJoaXN0b3J5IjpbMjAxODE4MjUxLDE5NDA5NzcxNiwxNDk1MD
+AyNDcxLDkyNzk2MjcxMSwtMTA1NTMyNjk1NSwtMTI5MjcwOTcy
+MCwtMTk2MzA4NTEyNl19
 -->
