--- a/books/programming-interview/main/포인.md
+++ b/books/programming-interview/main/포인.md
@@ -35,11 +35,11 @@ Spring Framework, 배송, 클레임 도메인, Spring Batch, NoSQL인 Couchbase
 > 왜 이직을 하려고 하나요?
 > 환경의 변화, 어쩔수 없는 요인, 면접관이 알고 있는 약점
 
-저는 개발자로 3년동안 일을 했습니다. 3년동안 배송과 클래임 서비스에 대해서 충분히 경험했다고 생각하고 이제 페이와 같이 이러한 서비스의 앞단의 서비스를 경험해보고 싶습니다. 사실 회사 상황이 힘들고 회사 분위기가 급변하여 이직을 하는게 아니라 개발자로서 개인적 발전을 위해 다른 서비스를 경험해보고 싶습니다. 또
-
-
+저는 개발자로 3년동안 일을 했습니다. 3년동안 배송과 클래임 서비스에 대해서 충분히 경험했다고 생각하고 이제 페이와 같이 이러한 서비스의 앞단의 서비스를 경험해보고 싶습니다. 사실 회사 상황이 힘들고 회사 분위기가 급변하여 이직을 하는게 아니라 개발자로서 개인적 발전을 위해 다른 서비스를 경험해보고 싶습니다. 또한 3년이란 기간도 이직을 하기에도 적당하다고 생각합니다.
 
 > 연봉은 얼마 정도 생각하십니까?
+
+
 
 > 이 회사에서 당신을 고용해야할까요?
 
@@ -52,7 +52,7 @@ Spring Framework, 배송, 클레임 도메인, Spring Batch, NoSQL인 Couchbase
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMzIxMzc5MzQyLDE5NDA5NzcxNiwxNDk1MD
+eyJoaXN0b3J5IjpbMjM1NTY4NTg1LDE5NDA5NzcxNiwxNDk1MD
 AyNDcxLDkyNzk2MjcxMSwtMTA1NTMyNjk1NSwtMTI5MjcwOTcy
 MCwtMTk2MzA4NTEyNl19
 -->
