--- a/books/programming-interview/main/포인.md
+++ b/books/programming-interview/main/포인.md
@@ -39,6 +39,8 @@ Spring Framework, 배송, 클레임 도메인, Spring Batch, NoSQL인 Couchbase
 
 > 연봉은 얼마 정도 생각하십니까?
 
+TMON이 굉장히 인금이 저렴한 점과 
+
 4000 -> 25%
 
 > 이 회사에서 당신을 고용해야할까요?
@@ -52,7 +54,8 @@ Spring Framework, 배송, 클레임 도메인, Spring Batch, NoSQL인 Couchbase
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTk2OTkxMjExOCwyMzU1Njg1ODUsMTk0MD
-k3NzE2LDE0OTUwMDI0NzEsOTI3OTYyNzExLC0xMDU1MzI2OTU1
-LC0xMjkyNzA5NzIwLC0xOTYzMDg1MTI2XX0=
+eyJoaXN0b3J5IjpbLTcyODYwNTY0NCwxOTY5OTEyMTE4LDIzNT
+U2ODU4NSwxOTQwOTc3MTYsMTQ5NTAwMjQ3MSw5Mjc5NjI3MTEs
+LTEwNTUzMjY5NTUsLTEyOTI3MDk3MjAsLTE5NjMwODUxMjZdfQ
+==
 -->
