books/programming-interview/main/포인.md updated from https://stackedit.io/

--- a/books/programming-interview/main/포인.md
+++ b/books/programming-interview/main/포인.md
@@ -39,9 +39,7 @@ Spring Framework, 배송, 클레임 도메인, Spring Batch, NoSQL인 Couchbase
 
 > 연봉은 얼마 정도 생각하십니까?
 
-TMON이 굉장히 인금이 저렴한 점과 
-
-4000 -> 25%
+TMON이 굉장히 인금이 저렴한 점과 페이의 기업 규모를 생각했을때 25%~30%정도 인상을 생각하고 있습니다.
 
 > 이 회사에서 당신을 고용해야할까요?
 
@@ -54,8 +52,8 @@ TMON이 굉장히 인금이 저렴한 점과
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTcyODYwNTY0NCwxOTY5OTEyMTE4LDIzNT
-U2ODU4NSwxOTQwOTc3MTYsMTQ5NTAwMjQ3MSw5Mjc5NjI3MTEs
-LTEwNTUzMjY5NTUsLTEyOTI3MDk3MjAsLTE5NjMwODUxMjZdfQ
-==
+eyJoaXN0b3J5IjpbLTEyMTY3OTAwMDksMTk2OTkxMjExOCwyMz
+U1Njg1ODUsMTk0MDk3NzE2LDE0OTUwMDI0NzEsOTI3OTYyNzEx
+LC0xMDU1MzI2OTU1LC0xMjkyNzA5NzIwLC0xOTYzMDg1MTI2XX
+0=
 -->
