--- a/books/programming-interview/java/CH12 데이터베이스 및 자바 애플리케이션.md
+++ b/books/programming-interview/java/CH12 데이터베이스 및 자바 애플리케이션.md
@@ -2,8 +2,9 @@
 
 SQL은 관계형 데이터베이스에 데이터를 관리하고 질의를 하기 위해 사용하는 선언전 언어다. 관계형 데이터 베이스의 표준 언어이며, 특정 데이터베이스 구현에 얽메이지 않는다. 
 
->참조 무결성(Referential integrity)
-관계 데이터베이스에서 2개의 관련 있던 테이블 간의 일관성을 말한다.
+>참조 무결성(Referential integrity)이란?
+
+2개 이상의 관련 있는 테이블 간의 데이터 일관성을 말한다.
 
 ![enter image description here](https://upload.wikimedia.org/wikipedia/commons/thumb/1/13/Referential_integrity_broken.png/250px-Referential_integrity_broken.png)
 
@@ -57,5 +58,5 @@ ResultSet rs = stmt.executeQuery("");
   
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTc3NjY0OTA2NywtNzEzOTEyNTE1XX0=
+eyJoaXN0b3J5IjpbMTkxMTM3ODQ2MywtNzEzOTEyNTE1XX0=
 -->
