books/programming-interview/java/CH12 데이터베이스 및 자바 애플리케이션.md updated from https://stackedit.io/

--- a/books/programming-interview/java/CH12 데이터베이스 및 자바 애플리케이션.md
+++ b/books/programming-interview/java/CH12 데이터베이스 및 자바 애플리케이션.md
@@ -50,7 +50,7 @@ ResultSet rs = stmt.executeQuery("");
 인메모리 데이터 베이스의 자료는 JVM 실행을 종료하면 사라지는데, 이는 인메모리 데이터 베이스를 데이터 유지에 신경쓰지 않고 테스트 데이터로 작업하기 쉽게 만든다. 인메모리 데이터베이스는 로컬 장비에서 실행되므로 네트워크 트래픽이 없고 귀찮은 연결관리를 하지 않아도 된다. 
 
 
-## 프로
+## 프로시저 
 
 저장 프로시저는  SQL이 제공하는 단순한 생성, 읽기, 수정, 삭제 보다 더 많은 기능을 제공한다. 프로시저는 DB서버에서 제공하는 함수와 비슷하다.
 
@@ -58,5 +58,5 @@ ResultSet rs = stmt.executeQuery("");
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTExOTU3OTc5NDYsLTcxMzkxMjUxNV19
+eyJoaXN0b3J5IjpbMTY4MjEwMTM0OCwtNzEzOTEyNTE1XX0=
 -->
