--- a/books/programming-interview/java/CH11 동시성.md
+++ b/books/programming-interview/java/CH11 동시성.md
@@ -1,7 +1,5 @@
 # 쓰레드 이용하기 
 
-> 코드를 병렬로 실행하려면 어떻게 해야 하는가?
-
 모든 애플리케이션은 최소한 하나의 스레드는 가지고 있어야 한다. 
 직접 스레드를 만들 수 도 있는데 새로운 스레드를 만들때 마다 코드는 해당 스레드에서 즉시 실행된다. 
 
@@ -11,7 +9,7 @@ Thead 객체의 start메서드를 호출한 후에는 run 멧더를 호출해서
 
 Thread 클래스는 병렬 실행이 가능한 스레드를 만들 수 있도록 JVM을 호출한다는 점이 특별하다. start 메서드를 소스 코드에서 확인할 수 있다면 네이티브 메서드인 start0으로 호출하는 private 메서드 역시 확인할 수 있다.Thread 수행 순서를 결정하는 것은 전적으로  JVM이다. 
 
-> Thread 클래스와 Excutor인터페이스의 차이점은 무엇인가?
+## Executor Framework
 
 자바 4에서 도입된 동시성 프레임워크(Executor Framework)는 동시성을 위한 클래스들을 제공했는데 자바의 스레드 모델을 이용하는데 큰 도움을 주었다. Executor 프레임웍은 다음과 같은 특징을 지닌다.
 
@@ -72,6 +70,6 @@ Excutors 클래스의 생성된 풀을 이용하면 Exectuor 객체 대신에 Ex
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTExNzk3NDc5MjAsLTE2NDY1MDg5NDVdfQ
-==
+eyJoaXN0b3J5IjpbMTUxNDExMzcxMywtMTE3OTc0NzkyMCwtMT
+Y0NjUwODk0NV19
 -->
