--- a/books/programming-interview/java/CH11 동시성.md
+++ b/books/programming-interview/java/CH11 동시성.md
@@ -15,10 +15,13 @@ Thread 클래스는 병렬 실행이 가능한 스레드를 만들 수 있도록
 
 -   쓰레드 풀을 사용(무거운 쓰레드는 미리 할당 가능)
 -   태스크와 쓰레드를 생성하고 관리하는 것을 분리
+	- 태스크(task == Runnable 한 구현체)
 -   쓰레드 풀안의 쓰레드는 한번해 하나씩 여러 태스크를 실행
 -   태스크 큐를 이용해 태스크를 관리
 -   Executor Service를 더이상 필요 없으면 중지
 -   Executor Service가 멈추면 모든 쓰레드도 중지
+
+* 
 
 Executor 인터페이스
 : 주어진 Runnable객체의 실행을 execute 메서드로 추상화 정의
@@ -70,6 +73,6 @@ Excutors 클래스의 생성된 풀을 이용하면 Exectuor 객체 대신에 Ex
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTUxNDExMzcxMywtMTE3OTc0NzkyMCwtMT
-Y0NjUwODk0NV19
+eyJoaXN0b3J5IjpbLTE5MDg4NDA4OTMsMTUxNDExMzcxMywtMT
+E3OTc0NzkyMCwtMTY0NjUwODk0NV19
 -->
