--- a/books/programming-interview/java/CH13 웹 애플리케이션 만들.md
+++ b/books/programming-interview/java/CH13 웹 애플리케이션 만들.md
@@ -1,12 +1,12 @@
 # 톰캣과 서블릿 API
 
-톰캣과 제티는 둘다 자바 서블릿 API를 구현한다. 
+톰캣은 자바의 서블릿 API를 구현한다. 
+
+JAVA 서블릿 API
+: JVM 위에서 실행되는 애플리케이션을 빌드하기 위한 인터페이스이다. 서블릿 API는 웹 애플리케이션을 정의하는데 web.xml이라 붙여둔 배포 명세서(deployment descriptor)를 사용한다.
 
 API
 : Application Programming Interface. In basic terms, APIs just allow applications to communicate with one another. The API is not the database or even the server, it is the code that governs the _access point(s)_ for the server.
-
-서블릿 API
-: JVM위에서 실행되는 애플리케이션을 빌드하기 위한 인터페이스이다. 서블릿 API는 웹 애플리케이션을 정의하는데 web.xml이라 붙여둔 배포 명세서(deployment descriptor)를 사용한다.
 
 ## 서블릿 컨테이너와 서블릿
 
@@ -96,5 +96,5 @@ HttpServeletRequest 클래스는 getParameterMap 메서드가 있다. 맵의 타
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzUzNTA4MjMsMTU5NjUzMzIyM119
+eyJoaXN0b3J5IjpbMTI4NjIzMTg2MSwxNTk2NTMzMjIzXX0=
 -->
