books/programming-interview/java/CH13 웹 애플리케이션 만들.md updated from https://stackedit.io/

--- a/books/programming-interview/java/CH13 웹 애플리케이션 만들.md
+++ b/books/programming-interview/java/CH13 웹 애플리케이션 만들.md
@@ -24,7 +24,7 @@ web.xml에는 웹 애플리케이션에서 사용할 서블릿을 정의할 수 
 
  ### 서블릿
 
-서블릿은 요청을 받아 웹 페이지를 동적으로 생성하는 서버측 프로그램
+서블릿은 요청을 받아 웹 페이지를 동적으로 생성하여 클라이언트에게 제공하는 서버측 프로그램.
 
 서블릿 컨테이너에 들어온 요청을 보고 컨테이너는 미리 스레드를 생성한다. 그리고 요청에 대응하는 서블릿을 불러  미리 생성된 스레드를 사용하여 doPost() 또는 doGet()을 호출한다.  
 
@@ -98,6 +98,6 @@ HttpServeletRequest 클래스는 getParameterMap 메서드가 있다. 맵의 타
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTI2ODM3MDU4MiwxMjg2MjMxODYxLDE1OT
+eyJoaXN0b3J5IjpbMTQxODY1OTk1MSwxMjg2MjMxODYxLDE1OT
 Y1MzMyMjNdfQ==
 -->
