--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -41,7 +41,7 @@
 
 > Spring Batch?
 
-스프링 배치는 **배치 애플리케이션 프레임워크**이다. 스프링이 가지고 있던 DI 컨테이너나 AOP, 트랜잭션 관리 기능은 기본으로 가지고 있다. 더욱이 앞서 이야기한 배치 처리를 위한 각종 요건을 이미 갖추고 있다. 
+스프링 배치는 **배치 처리르 위한 애플리케이션 프레임워크**이다. 스프링이 가지고 있던 DI 컨테이너나 AOP, 트랜잭션 관리 기능은 기본으로 가지고 있다. 더욱이 앞서 이야기한 배치 처리를 위한 각종 요건을 이미 갖추고 있다. 
 
 * 처리 흐름을 정형화 
 	* 단순한 형태의 Tasklet 방식
@@ -278,11 +278,11 @@ public class Mypartitioner implements Partitioner {
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTk2OTM3NDg1LC0yMDI4NjU1ODQzLDE3Nz
-I5NjkzODYsMTc3NTg3MTk2OSwxMzA4MjU2OTcxLC0xMzA0NjMz
-NDE5LC0yNzE1ODgwNTEsLTYyODQ2OTcyMywtMTgyMTAyNDQ1OC
-wtMTI5ODg3Mjk0MiwxNTU4ODQ5Njg4LC0xNDA3MDExMzk2LDky
-MjUwOTMyOCwxNzQ2ODQ1MzUyLC0yMTEyODgwOTg0LC0xMTExNj
-YxOTE0LDk5NTA4NDE2MSwxODQxNDc3MTQsLTc5OTc3MTA1NCwt
-MTQ1MzU2MzcxNV19
+eyJoaXN0b3J5IjpbLTY5NTQ5NDA0MSw1OTY5Mzc0ODUsLTIwMj
+g2NTU4NDMsMTc3Mjk2OTM4NiwxNzc1ODcxOTY5LDEzMDgyNTY5
+NzEsLTEzMDQ2MzM0MTksLTI3MTU4ODA1MSwtNjI4NDY5NzIzLC
+0xODIxMDI0NDU4LC0xMjk4ODcyOTQyLDE1NTg4NDk2ODgsLTE0
+MDcwMTEzOTYsOTIyNTA5MzI4LDE3NDY4NDUzNTIsLTIxMTI4OD
+A5ODQsLTExMTE2NjE5MTQsOTk1MDg0MTYxLDE4NDE0NzcxNCwt
+Nzk5NzcxMDU0XX0=
 -->
