--- a/books/programming-interview/20191216.md
+++ b/books/programming-interview/20191216.md
@@ -1,13 +1,17 @@
 # 네이버 페이 1차 면접
 
-##
+## 자기소개 한번!
 
-##
+## 경력 프로젝트에 대해서
+
+## 도메인 아키텍쳐에 대해
+
+
 
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIwNzgyNjkxMDddfQ==
+eyJoaXN0b3J5IjpbLTE0MDEwMjM4NTZdfQ==
 -->
