books/programming-interview/20191216.md updated from https://stackedit.io/

--- a/books/programming-interview/20191216.md
+++ b/books/programming-interview/20191216.md
@@ -6,6 +6,10 @@
 
 ## 도메인 아키텍쳐에 대해
 
+## 코딩 테스트
+
+## 자신의 강점
+
 
 
 
@@ -13,5 +17,5 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0MDEwMjM4NTZdfQ==
+eyJoaXN0b3J5IjpbMTg2NTgwOTE3MF19
 -->
