books/programming-interview/20191216.md updated from https://stackedit.io/

--- a/books/programming-interview/20191216.md
+++ b/books/programming-interview/20191216.md
@@ -7,11 +7,14 @@
 ## 도메인 아키텍쳐에 대해
 
 ## 코딩 테스트
-
+아래와 같은 메서드 시그니처가 주어 진다. 
 ```
-String reverse(int b, int e, String 
-
+String reverse(int b, int e, String str) {
+}
 ```
+위의 reverse를 호출하면 str 문자열 중 b와 e의 범위내에 있는 문자열만 순서를 뒤바꾼 결과를 반환한다. 예를 들면 ABCDE
+
+
 
 
 ## 자신의 강점
@@ -23,5 +26,5 @@ String reverse(int b, int e, String
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0OTIzMjg0MDUsMTg2NTgwOTE3MF19
+eyJoaXN0b3J5IjpbNDk2OTE2NzEyLDE4NjU4MDkxNzBdfQ==
 -->
