--- a/books/programming-interview/20191216.md
+++ b/books/programming-interview/20191216.md
@@ -12,7 +12,7 @@
 String reverse(int b, int e, String str) {
 }
 ```
-위의 reverse를 호출하면 str 문자열 중 b와 e의 범위내에 있는 문자열만 순서를 뒤바꾼 결과를 반환한다. 예를 들면 ABCDE
+위의 reverse를 호출하면 str 문자열 중 b와 e의 범위내에 있는 문자열만 순서를 뒤바꾼 결과를 반환한다. 예를 들면 (1,3, ABCDE)이 파라미터로 주어지면 `BCD` 문자열 거꾸로 
 
 
 
@@ -26,5 +26,5 @@ String reverse(int b, int e, String str) {
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDk2OTE2NzEyLDE4NjU4MDkxNzBdfQ==
+eyJoaXN0b3J5IjpbMTczNzQ0NDI5OCwxODY1ODA5MTcwXX0=
 -->
