books/programming-interview/20191216.md updated from https://stackedit.io/

--- a/books/programming-interview/20191216.md
+++ b/books/programming-interview/20191216.md
@@ -9,13 +9,17 @@
 ## 코딩 테스트
 아래와 같은 메서드 시그니처가 주어 진다. 
 ```
+String reverse(int b, int e, String str) { ... }
+```
+위의 reverse를 호출하면 str 문자열 중 b와 e의 범위내에 있는 문자열만 순서를 뒤바꾼 결과를 반환한다. 예를 들면 (1,3, ABCDE)이 파라미터로 주어지면 결과는 ADCBE가 된다. 
+
+
+``` // myAnswer
 String reverse(int b, int e, String str) {
+	String [] target = str.subString(b,e);
+	for(int i = 0; i < target.size()-1 / 2)
 }
 ```
-위의 reverse를 호출하면 str 문자열 중 b와 e의 범위내에 있는 문자열만 순서를 뒤바꾼 결과를 반환한다. 예를 들면 (1,3, ABCDE)이 파라미터로 주어지면 `BCD` 문자열 거꾸로 
-
-
-
 
 ## 자신의 강점
 
@@ -26,5 +30,5 @@ String reverse(int b, int e, String str) {
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTczNzQ0NDI5OCwxODY1ODA5MTcwXX0=
+eyJoaXN0b3J5IjpbLTE1ODc0OTIwOTAsMTg2NTgwOTE3MF19
 -->
