books/programming-interview/20191216.md updated from https://stackedit.io/

--- a/books/programming-interview/20191216.md
+++ b/books/programming-interview/20191216.md
@@ -16,8 +16,13 @@ String reverse(int b, int e, String str) { ... }
 
 ``` // myAnswer
 String reverse(int b, int e, String str) {
-	String [] target = str.subString(b,e);
-	for(int i = 0; i < target.size()-1 / 2)
+	String [] target = str.subString(b,e).toArray();
+	for(int i = 0; i < (target.size()-1) / 2; i++){
+		switch(i, target.size()-i, target);
+	}
+	String head = str.subString(0,b);
+	String tail = str.subString(e,target.size());
+	return head + target + ta
 }
 ```
 
@@ -30,5 +35,5 @@ String reverse(int b, int e, String str) {
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1ODc0OTIwOTAsMTg2NTgwOTE3MF19
+eyJoaXN0b3J5IjpbLTM1ODkwMTczNywxODY1ODA5MTcwXX0=
 -->
