--- a/books/programming-interview/20191216.md
+++ b/books/programming-interview/20191216.md
@@ -13,7 +13,6 @@ String reverse(int b, int e, String str) { ... }
 ```
 위의 reverse를 호출하면 str 문자열 중 b와 e의 범위내에 있는 문자열만 순서를 뒤바꾼 결과를 반환한다. 예를 들면 (1,3, ABCDE)이 파라미터로 주어지면 결과는 ADCBE가 된다. 
 
-
 ``` // myAnswer
 String reverse(int b, int e, String str) {
 	String [] target = str.subString(b,e).toArray();
@@ -22,9 +21,36 @@ String reverse(int b, int e, String str) {
 	}
 	String head = str.subString(0,b);
 	String tail = str.subString(e,target.size());
-	return head + target + ta
+	return head + target + tail;
+}
+
+void switch(int from, int to, String[] arr){
+	String temp = arr[from];
+	arr[from] = arr[to];
+	arr[to] = temp;
 }
 ```
+생각해보니 더 개선이 가능하겠다.
+
+``` // myAnswer
+String reverse(int b, int e, String str) {
+	
+	for(int i = 0; i < (target.size()-1) / 2; i++){
+		switch(i, target.size()-i, target);
+	}
+	String head = str.subString(0,b);
+	String tail = str.subString(e,target.size());
+	return head + target + tail;
+}
+
+void switch(int from, int to, String[] arr){
+	String temp = arr[from];
+	arr[from] = arr[to];
+	arr[to] = temp;
+}
+```
+
+
 
 ## 자신의 강점
 
@@ -35,5 +61,5 @@ String reverse(int b, int e, String str) {
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTM1ODkwMTczNywxODY1ODA5MTcwXX0=
+eyJoaXN0b3J5IjpbMTkxODQyMDA1MiwxODY1ODA5MTcwXX0=
 -->
