books/programming-interview/20191216.md updated from https://stackedit.io/

--- a/books/programming-interview/20191216.md
+++ b/books/programming-interview/20191216.md
@@ -35,8 +35,13 @@ void switch(int from, int to, String[] arr){
 ``` // myAnswer
 String reverse(int b, int e, String str) {
 	
-	for(int i = 0; i < (target.size()-1) / 2; i++){
-		switch(i, target.size()-i, target);
+	StrinBuilder builder = new StringBuilder();
+	char[] strArr = str.to
+	for(int i = 0; i < target.size(); i++){
+		if(i < b){
+			builder.append(str.)
+		}
+
 	}
 	String head = str.subString(0,b);
 	String tail = str.subString(e,target.size());
@@ -61,5 +66,5 @@ void switch(int from, int to, String[] arr){
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTkxODQyMDA1MiwxODY1ODA5MTcwXX0=
+eyJoaXN0b3J5IjpbMTcxMDYwNzg5MSwxODY1ODA5MTcwXX0=
 -->
