books/programming-interview/20191216.md updated from https://stackedit.io/

--- a/books/programming-interview/20191216.md
+++ b/books/programming-interview/20191216.md
@@ -36,10 +36,14 @@ void switch(int from, int to, String[] arr){
 String reverse(int b, int e, String str) {
 	
 	StrinBuilder builder = new StringBuilder();
-	char[] strArr = str.to
+	char[] strArr = str.toArray();
 	for(int i = 0; i < target.size(); i++){
-		if(i < b){
-			builder.append(str.)
+		if(i < b || i > e){
+			builder.append(str.[i])
+		} else if( b =i){
+		
+		} else {
+			
 		}
 
 	}
@@ -66,5 +70,5 @@ void switch(int from, int to, String[] arr){
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTcxMDYwNzg5MSwxODY1ODA5MTcwXX0=
+eyJoaXN0b3J5IjpbLTIxMzIzNjY5NzcsMTg2NTgwOTE3MF19
 -->
