books/programming-interview/20191216.md updated from https://stackedit.io/

--- a/books/programming-interview/20191216.md
+++ b/books/programming-interview/20191216.md
@@ -40,12 +40,12 @@ String reverse(int b, int e, String str) {
 	for(int i = 0; i < target.size(); i++){
 		if(i < b || i > e){
 			builder.append(str.[i])
-		} else if( b =i){
-		
 		} else {
-			
+			String [] target = str.subString(b,e).toArray();
+			for(int i = 0; i < (target.size()-1) / 2; i++){
+				switch(i, target.size()-i, target);
+			}
 		}
-
 	}
 	String head = str.subString(0,b);
 	String tail = str.subString(e,target.size());
@@ -70,5 +70,5 @@ void switch(int from, int to, String[] arr){
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIxMzIzNjY5NzcsMTg2NTgwOTE3MF19
+eyJoaXN0b3J5IjpbLTU1NTc3ODY0MCwxODY1ODA5MTcwXX0=
 -->
