books/programming-interview/20191216.md updated from https://stackedit.io/

--- a/books/programming-interview/20191216.md
+++ b/books/programming-interview/20191216.md
@@ -41,8 +41,8 @@ String reverse(int b, int e, String str) {
 		if(i < b || i > e){
 			builder.append(str.[i])
 		} else {
-			String [] target = str.subString(b,e).toArray();
-			for(int i = 0; i < (target.size()-1) / 2; i++){
+			int mid = e-i / 2 ; 
+			for(int j = i; j <= e; j++){
 				switch(i, target.size()-i, target);
 			}
 		}
@@ -70,5 +70,5 @@ void switch(int from, int to, String[] arr){
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTU1NTc3ODY0MCwxODY1ODA5MTcwXX0=
+eyJoaXN0b3J5IjpbLTEyNjUyNzUxMDUsMTg2NTgwOTE3MF19
 -->
